--- a/config/database.yml
+++ b/config/database.yml
@@ -1,8 +1,10 @@
-# PostgreSQL. Versions 7.4 and 8.x are supported.
+# PostgreSQL. Versions 9.3 and up are supported.
 #
 # Install the pg driver:
 #   gem install pg
-# On Mac OS X with macports:
+# On macOS with Homebrew:
+#   gem install pg -- --with-pg-config=/usr/local/bin/pg_config
+# On macOS with MacPorts:
 #   gem install pg -- --with-pg-config=/opt/local/lib/postgresql84/bin/pg_config
 # On Windows:
 #   gem install pg
@@ -10,16 +12,23 @@
 #       Install PostgreSQL and put its /bin directory on your path.
 #
 # Configure Using Gemfile
-# gem 'pg'
+# gem "pg"
 #
-development:
+default: &default
   adapter: postgresql
   encoding: unicode
+  # For details on connection pooling, see Rails configuration guide
+  # https://guides.rubyonrails.org/configuring.html#database-pooling
+  pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
+
+development:
+  <<: *default
   database: ziher_development
-  pool: 5
-  host: localhost
-  username: ziher
-  password: ziher
+  host: "<%= ENV['ZIHER_DB_HOST'] %>"
+  username: "<%= ENV['ZIHER_DB_USERNAME'] %>"
+  password: "<%= ENV['ZIHER_DB_PASSWORD'] %>"
+  # need to provide 'url' to force tcp/ip connection https://stackoverflow.com/a/63620960
+  url: postgresql://postgres@localhost:5432
 
   # Connect on a TCP socket. Omitted by default since the client uses a
   # domain socket that doesn't need configuration. Windows does not have
@@ -56,20 +65,18 @@ development:
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
-  adapter: postgresql
-  encoding: unicode
+  <<: *default
   database: ziher_test
-  pool: 5
   host: localhost
   username: postgres
   password: postgres
   min_messages: warning
+  # need to provide 'url' to force tcp/ip connection https://stackoverflow.com/a/63620960
+  url: postgresql://postgres@localhost:5432
 
 production:
-  adapter: postgresql
-  encoding: unicode
+  <<: *default
   database: "<%= ENV['ZIHER_DB_NAME'] %>"
-  pool: 5
   host: "<%= ENV['ZIHER_DB_HOST'] %>"
   username: "<%= ENV['ZIHER_DB_USERNAME'] %>"
   password: "<%= ENV['ZIHER_DB_PASSWORD'] %>"
