--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -66,7 +66,7 @@ services:
     profiles:
       - dev
     container_name: ziher-dev
-    image: ziher/app
+    image: ziher/app:latest-dev
     entrypoint: /ziher/docker/entrypoint-dev.sh
     volumes:
       - ../:/ziher/
@@ -87,7 +87,7 @@ services:
     profiles:
       - dev-shell
     container_name: ziher-dev-shell
-    image: ziher/app
+    image: ziher/app:latest-dev
     entrypoint: /ziher/docker/entrypoint-dev-shell.sh
     volumes:
       - ../:/ziher/
