fix 0b9f396: buduj obraz bazowy również na zmianach w Dockerfile.base

--- a/.github/workflows/build-base.yml
+++ b/.github/workflows/build-base.yml
@@ -7,6 +7,7 @@ on:
     paths:
       - 'Gemfile'
       - 'Gemfile.lock'
+      - 'Dockerfile.base'
       - '.github/workflows/build-base.yml'
 
 jobs:
