--- a/Dockerfile.base
+++ b/Dockerfile.base
@@ -1,4 +1,4 @@
-FROM ruby:2.6.10-bullseye AS ziher-base
+FROM ruby:3.0.7-slim-bullseye AS ziher-base
 
 RUN mkdir /ziher
 WORKDIR /ziher
@@ -8,20 +8,27 @@ RUN set -x \
   && gem install bundler -v 2.3.26
 
 RUN set -x \
-  && bundle config set --local without 'development test' \
-  && bundle install --no-cache \
-  && rm -rf /usr/local/bundle/cache/* \
-  && gunzip /usr/local/bundle/gems/wkhtmltopdf-binary-*/bin/wkhtmltopdf_debian_11_amd64.gz \
-  && rm -rf /usr/local/bundle/gems/wkhtmltopdf-binary-*/bin/*.gz \
-  && chmod 100 /usr/local/bundle/gems/wkhtmltopdf-binary-0.12.6.9/bin/wkhtmltopdf_debian_11_amd64
-
-RUN set -x \
  && apt-get update \
  && apt-get upgrade --yes \
  && apt-get install --yes \
       build-essential \
       libpq-dev \
+      wget \
+      libjpeg62-turbo \
+      libpng16-16 \
+      libxrender1 \
+      libfontconfig1 \
+      libfreetype6 \
+      libx11-6 \
       \
  && apt-get --yes --purge autoremove \
  && apt-get clean \
  && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
+
+RUN set -x \
+ && bundle config set --local without 'development test' \
+ && bundle install --no-cache \
+ && rm -rf /usr/local/bundle/cache/* \
+ && gunzip /usr/local/bundle/gems/wkhtmltopdf-binary-*/bin/wkhtmltopdf_debian_11_amd64.gz \
+ && rm -rf /usr/local/bundle/gems/wkhtmltopdf-binary-*/bin/*.gz \
+ && chmod 100 /usr/local/bundle/gems/wkhtmltopdf-binary-0.12.6.9/bin/wkhtmltopdf_debian_11_amd64
