chore: aktualizacja do Ruby on Rails 7.1

--- a/Dockerfile.base
+++ b/Dockerfile.base
@@ -11,6 +11,7 @@ RUN set -x \
  && apt-get update \
  && apt-get upgrade --yes \
  && apt-get install --yes \
+      nodejs \
       build-essential \
       libpq-dev \
       wget \
